Bug 1372060 - Relax assertions when missing SurfaceTexture in compositor r=jgilbert

MozReview-Commit-ID: heJALqGBLV